# News-Research-Tool

./: .env  README.md  backend_demo.py  chunk_generation.py  faiss_demo.py  news_research_tool.py  nvidia_news.txt  pyproject.toml
faiss_index/: index.faiss  index.pkl
faiss_store_genai/: index.faiss  index.pkl
faiss_store_genai.pkl/: index.faiss  index.pkl
